# datasette-acl

./: README.md  pyproject.toml
datasette_acl/: __init__.py  hookspecs.py  utils.py
datasette_acl/templates/: manage_acl_group.html  manage_acl_groups.html  manage_table_acls.html  table_acls.html
datasette_acl/views/: groups.py  table_acls.py
tests/: conftest.py  test_acl.py  test_acl_actor_ids.py  test_datasette_acl_valid_actors.py  test_groups.py  test_startup.py  test_table_acls.py
